added social media footer

--- a/index.html
+++ b/index.html
@@ -3,27 +3,39 @@
     <!-- Background things on the page -->
     <head>
         <title>I'm Kirubel!</title>
-        <link rel = "stylesheet" href = "style.css"/>
+        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
-    <!-- Visualized things on the page -->
+    <!-- navigation bar -->
     <body>
         <div id="navbar">
             <ul>
-                <li>
-                    <a href="mailto:kirubelbehailu@gmail.com" class="nav-link">Contact</a>
-                </li>
+
             </ul>
         </div>
 
         <br/>
 
+        <!-- Main website body -->
         <div id="about">
             <h1 id="intro">Hi, I'm <span id="fancy">Kirubel</span></h1>
             <img src="https://user-images.githubusercontent.com/8728544/68689962-39dbb500-053f-11ea-919d-c314d6dadec9.jpg"/>
             <p>I'm a Georgia State University Graduate.</p>
-            <p>Check out my <a href="http://github.com/KirubelBehailu">GitHub</a></p>
+            <p>Find me on social media!</p>
         </div>
     </body>
+
+    <br/>
+
+    <!-- The social media icon bar -->
+    <div class="icon-bar">
+        <a href="https://www.instagram.com/kirubelbehailu" class="instagram"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.facebook.com/kirubel.behailu.14" class="facebook"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/Kirubel_Behailu" class="twitter"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/kirubelbehailu/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.youtube.com/channel/UCl_IC-fIF2etgVcF-98HiJw/about" class="youtube"><i class="fa fa-youtube"></i></a>
+    </div>
+
     <script src="script.js"></script>
 </html>
