--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Main website body -->
         <div id="about">
             <h1 id="intro">Hi, I'm <span id="fancy">Kirubel</span></h1>
-            <img src="https://user-images.githubusercontent.com/8728544/68689962-39dbb500-053f-11ea-919d-c314d6dadec9.jpg"/>
+            <img style="width: 25%;" src="https://instagram.fatl1-1.fna.fbcdn.net/v/t51.2885-15/sh0.08/e35/s640x640/38772601_1964458170510917_2702105324826918912_n.jpg?_nc_ht=instagram.fatl1-1.fna.fbcdn.net&_nc_cat=105&_nc_ohc=lRNtTS-jw7oAX88U5Re&oh=f3a4e94b209e7f37bdd86f16d93b989b&oe=5E955B78"/>
             <p>I'm a Georgia State University Graduate.</p>
             <p>Find me on social media!</p>
         </div>
