changed picture and styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <!-- Background things on the page -->
     <head>
-        <title>I'm Kirubel!</title>
+        <title>Kirubel</title>
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -11,7 +11,6 @@
     <body>
         <div id="navbar">
             <ul>
-
             </ul>
         </div>
 
@@ -20,8 +19,7 @@
         <!-- Main website body -->
         <div id="about">
             <h1 id="intro">Hi, I'm <span id="fancy">Kirubel</span></h1>
-            <img style="width: 25%;" src="https://instagram.fatl1-1.fna.fbcdn.net/v/t51.2885-15/sh0.08/e35/s640x640/38772601_1964458170510917_2702105324826918912_n.jpg?_nc_ht=instagram.fatl1-1.fna.fbcdn.net&_nc_cat=105&_nc_ohc=lRNtTS-jw7oAX88U5Re&oh=f3a4e94b209e7f37bdd86f16d93b989b&oe=5E955B78"/>
-            <p>I'm a Georgia State University Graduate.</p>
+            <img style="width: 25%;" src="headshot.jpg"/>
             <p>Find me on social media!</p>
         </div>
     </body>
