add Google Analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
     <!-- Background things on the page -->
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155113084-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-155113084-1');
+        </script>
+        <!-- Title -->
         <title>Kirubel</title>
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,6 +21,7 @@
     <body>
         <div id="navbar">
             <ul>
+                <li>something here</li>
             </ul>
         </div>
 
@@ -20,7 +31,7 @@
         <div id="about">
             <h1 id="intro">Hi, I'm <span id="fancy">Kirubel</span></h1>
             <img style="width: 25%;" src="headshot.jpg"/>
-            <p>Find me on social media!</p>
+            <p>Find me on social <a href="photography.html">media!</a></p>
         </div>
     </body>
 
