fixed unintended edits

--- a/index.html
+++ b/index.html
@@ -19,19 +19,13 @@
 
     <!-- navigation bar -->
     <body>
-        <div id="navbar">
-            <ul>
-                <li>something here</li>
-            </ul>
-        </div>
-
         <br/>
 
         <!-- Main website body -->
         <div id="about">
             <h1 id="intro">Hi, I'm <span id="fancy">Kirubel</span></h1>
             <img style="width: 25%;" src="headshot.jpg"/>
-            <p>Find me on social <a href="photography.html">media!</a></p>
+            <p>Find me on social media!</p>
         </div>
     </body>
 
