--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- The social media icon bar -->
     <div class="icon-bar">
         <a href="https://www.instagram.com/kirubelbehailu" class="instagram"><i class="fa fa-instagram"></i></a>
-        <a href="https://www.facebook.com/kirubel.behailu.14" class="facebook"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.snapchat.com/add/kirubelbehailu" class="snapchat"><i class="fa fa-snapchat"></i></a>
         <a href="https://twitter.com/Kirubel_Behailu" class="twitter"><i class="fa fa-twitter"></i></a>
         <a href="https://www.linkedin.com/in/kirubelbehailu/" class="linkedin"><i class="fa fa-linkedin"></i></a>
         <a href="https://www.youtube.com/channel/UCl_IC-fIF2etgVcF-98HiJw/about" class="youtube"><i class="fa fa-youtube"></i></a>
