--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="https://twitter.com/Kirubel_Behailu" class="twitter"><i class="fa fa-twitter"></i></a>
         <a href="https://www.snapchat.com/add/kirubelbehailu" class="snapchat"><i class="fa fa-snapchat"></i></a>
         <a href="https://www.linkedin.com/in/kirubelbehailu/" class="linkedin"><i class="fa fa-linkedin"></i></a>
-        <a href="https://www.youtube.com/channel/UCl_IC-fIF2etgVcF-98HiJw/about" class="youtube"><i class="fa fa-youtube"></i></a>
+        <a href="https://www.youtube.com/channel/UCl_IC-fIF2etgVcF-98HiJw/about" class="youtube"><i class="fa fa-youtube-play"></i></a>
     </div>
 
     <script src="script.js"></script>
