--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Title -->
         <title>Kirubel</title>
         <link rel="stylesheet" href="style.css"/>
-        <link rel="shortcut icon" type="image/x-icon" href="animoji.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
