--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>Kirubel</title>
         <link rel="stylesheet" href="style.css"/>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     </head>
 
     <!-- navigation bar -->
