--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <!-- The social media icon bar -->
     <div class="icon-bar">
-        <a href="https://www.instagram.com/kirubelbehailu" class="instagram"><i class="fa fa-instagram"></i></a>
-        <a href="https://twitter.com/Kirubel_Behailu" class="twitter"><i class="fa fa-twitter"></i></a>
-        <a href="https://www.snapchat.com/add/kirubelbehailu" class="snapchat"><i class="fa fa-snapchat"></i></a>
+        <a href="https://www.instagram.com/kirubelbehailu" class="instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/Kirubel_Behailu" class="twitter"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.snapchat.com/add/kirubelbehailu" class="snapchat"><i class="fab fa-snapchat"></i></a>
         <a href="https://www.tiktok.com/ZMJnUpYE5/" class="tiktok"><i class="fab fa-tiktok"></i></a>
-        <a href="https://www.youtube.com/channel/UCl_IC-fIF2etgVcF-98HiJw/about" class="youtube"><i class="fa fa-youtube-play"></i></a>
+        <a href="https://www.youtube.com/channel/UCl_IC-fIF2etgVcF-98HiJw/about" class="youtube"><i class="fab fa-youtube-play"></i></a>
     </div>
 
     <script src="script.js"></script>
