--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="https://twitter.com/Kirubel_Behailu" class="twitter"><i class="fab fa-twitter"></i></a>
         <a href="https://www.snapchat.com/add/kirubelbehailu" class="snapchat"><i class="fab fa-snapchat"></i></a>
         <a href="https://www.tiktok.com/ZMJnUpYE5/" class="tiktok"><i class="fab fa-tiktok"></i></a>
-        <a href="https://www.youtube.com/channel/UCl_IC-fIF2etgVcF-98HiJw/about" class="youtube"><i class="fab fa-youtube-play"></i></a>
+        <a href="https://www.youtube.com/channel/UCl_IC-fIF2etgVcF-98HiJw/about" class="youtube"><i class="fab fa-youtube"></i></a>
     </div>
 
     <script src="script.js"></script>
