--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="https://www.instagram.com/kirubelbehailu" class="instagram"><i class="fab fa-instagram"></i></a>
         <a href="https://twitter.com/Kirubel_Behailu" class="twitter"><i class="fab fa-twitter"></i></a>
         <a href="https://www.snapchat.com/add/kirubelbehailu" class="snapchat"><i class="fab fa-snapchat"></i></a>
-        <a href="https://www.tiktok.com/ZMJnUpYE5/" class="tiktok"><i class="fab fa-tiktok"></i></a>
+        <a href="https://vm.tiktok.com/ZMJnUpYE5/" class="tiktok"><i class="fab fa-tiktok"></i></a>
         <a href="https://www.youtube.com/channel/UCl_IC-fIF2etgVcF-98HiJw/about" class="youtube"><i class="fab fa-youtube"></i></a>
     </div>
 
