--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="about">
             <h1 id="intro">Hi, I'm <span id="fancy">Kirubel</span></h1>
             <img style="width: 25%;" src="headshot.jpg"/>
-            <p>Find me on social media!</p>
+            <p>Find me on the internet!</p>
         </div>
     </body>
 
@@ -36,10 +36,10 @@
     <div class="icon-bar">
         <a href="https://www.instagram.com/kirubelbehailu" class="instagram"><i class="fab fa-instagram"></i></a>
         <a href="https://www.snapchat.com/add/kirubelbehailu" class="snapchat"><i class="fab fa-snapchat"></i></a>
+        <a href="https://www.threads.net/@kirubelbehailu/" class="pinterest"><i class="fab fa-threads"></i></a>
         <a href="https://www.tiktok.com/@kirubelbehailu" class="tiktok"><i class="fab fa-tiktok"></i></a>
         <a href="https://x.com/kirubel_behailu" class="twitter"><i class="fab fa-x-twitter"></i></a>
         <a href="https://www.youtube.com/@kirubelbehailu" class="youtube"><i class="fab fa-youtube"></i></a>
-        <a href="https://www.pinterest.com/" class="pinterest"><i class="fab fa-threads"></i></a>
     </div>
 
     <script src="script.js"></script>
